Yourkoza/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CHARACTER
    DECREASE
    INCREASE
    INPUT
    INTEGER
    JOIN
    LETTER
    NOT
    OR
    POWER
    REAL
    RISK
    SAVE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> conditional
Rule 6     statement -> loop
Rule 7     statement -> function
Rule 8     statement -> display
Rule 9     statement -> input
Rule 10    statement -> COMMENT
Rule 11    assignment -> LET IDENTIFIER BE EQUAL TO expression
Rule 12    conditional -> IF condition THEN statements else_statements_opt
Rule 13    else_statements_opt -> ELSE statements
Rule 14    else_statements_opt -> empty
Rule 15    condition -> expression IS_LESS_THAN expression
Rule 16    condition -> expression IS_EQUAL_TO expression
Rule 17    condition -> expression IS_GREATER_THAN expression
Rule 18    condition -> expression IS_NOT_EQUAL_TO expression
Rule 19    expression -> expression PLUS term
Rule 20    expression -> expression MINUS term
Rule 21    expression -> term
Rule 22    term -> term TIMES factor
Rule 23    term -> term DIVIDE factor
Rule 24    term -> factor
Rule 25    factor -> NUMBER
Rule 26    factor -> LPAREN expression RPAREN
Rule 27    input -> LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN
Rule 28    display -> SHOW expression
Rule 29    loop -> FOR IDENTIFIER IN list DO statements
Rule 30    loop -> WHILE condition DO statements
Rule 31    list -> LBRACKET expression_list RBRACKET
Rule 32    list -> empty
Rule 33    expression_list -> expression
Rule 34    expression_list -> expression_list COMMA expression
Rule 35    function -> FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
Rule 36    parameters -> IDENTIFIER
Rule 37    parameters -> parameters COMMA IDENTIFIER
Rule 38    return_statement_opt -> RETURN expression
Rule 39    return_statement_opt -> empty
Rule 40    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BE                   : 11 27
CHARACTER            : 
COMMA                : 34 37
COMMENT              : 10
DECREASE             : 
DIVIDE               : 23
DO                   : 29 30
ELSE                 : 13
EQUAL                : 11 27
FOR                  : 29
FUNCTION             : 35
IDENTIFIER           : 11 27 27 29 35 36 37
IF                   : 12
IN                   : 29
INCREASE             : 
INPUT                : 
INTEGER              : 
IS_EQUAL_TO          : 16
IS_GREATER_THAN      : 17
IS_LESS_THAN         : 15
IS_NOT_EQUAL_TO      : 18
JOIN                 : 
LBRACE               : 35
LBRACKET             : 31
LET                  : 11 27
LETTER               : 
LPAREN               : 26 27 35
MINUS                : 20
NOT                  : 
NUMBER               : 25
OR                   : 
PLUS                 : 19
POWER                : 
RBRACE               : 35 35
RBRACKET             : 31
REAL                 : 
RETURN               : 38
RISK                 : 
RPAREN               : 26 27 35
SAVE                 : 
SHOW                 : 27 28
STRING_LITERAL       : 27
THEN                 : 12
TIMES                : 22
TO                   : 11 27
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

assignment           : 4
condition            : 12 30
conditional          : 5
display              : 8
else_statements_opt  : 12
empty                : 14 32 39
expression           : 11 15 15 16 16 17 17 18 18 19 20 26 28 33 34 38
expression_list      : 31 34
factor               : 22 23 24
function             : 7
input                : 9
list                 : 29
loop                 : 6
parameters           : 35 37
program              : 0
return_statement_opt : 35
statement            : 2 3
statements           : 1 2 12 13 29 30 35
term                 : 19 20 21 22 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . conditional
    (6) statement -> . loop
    (7) statement -> . function
    (8) statement -> . display
    (9) statement -> . input
    (10) statement -> . COMMENT
    (11) assignment -> . LET IDENTIFIER BE EQUAL TO expression
    (12) conditional -> . IF condition THEN statements else_statements_opt
    (29) loop -> . FOR IDENTIFIER IN list DO statements
    (30) loop -> . WHILE condition DO statements
    (35) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (28) display -> . SHOW expression
    (27) input -> . LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    COMMENT         shift and go to state 10
    LET             shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    FUNCTION        shift and go to state 15
    SHOW            shift and go to state 16

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    conditional                    shift and go to state 5
    loop                           shift and go to state 6
    function                       shift and go to state 7
    display                        shift and go to state 8
    input                          shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . conditional
    (6) statement -> . loop
    (7) statement -> . function
    (8) statement -> . display
    (9) statement -> . input
    (10) statement -> . COMMENT
    (11) assignment -> . LET IDENTIFIER BE EQUAL TO expression
    (12) conditional -> . IF condition THEN statements else_statements_opt
    (29) loop -> . FOR IDENTIFIER IN list DO statements
    (30) loop -> . WHILE condition DO statements
    (35) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (28) display -> . SHOW expression
    (27) input -> . LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    $end            reduce using rule 1 (program -> statements .)
    COMMENT         shift and go to state 10
    LET             shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    FUNCTION        shift and go to state 15
    SHOW            shift and go to state 16

    statement                      shift and go to state 17
    assignment                     shift and go to state 4
    conditional                    shift and go to state 5
    loop                           shift and go to state 6
    function                       shift and go to state 7
    display                        shift and go to state 8
    input                          shift and go to state 9

state 3

    (3) statements -> statement .

    COMMENT         reduce using rule 3 (statements -> statement .)
    LET             reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FUNCTION        reduce using rule 3 (statements -> statement .)
    SHOW            reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    COMMENT         reduce using rule 4 (statement -> assignment .)
    LET             reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FUNCTION        reduce using rule 4 (statement -> assignment .)
    SHOW            reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> conditional .

    COMMENT         reduce using rule 5 (statement -> conditional .)
    LET             reduce using rule 5 (statement -> conditional .)
    IF              reduce using rule 5 (statement -> conditional .)
    FOR             reduce using rule 5 (statement -> conditional .)
    WHILE           reduce using rule 5 (statement -> conditional .)
    FUNCTION        reduce using rule 5 (statement -> conditional .)
    SHOW            reduce using rule 5 (statement -> conditional .)
    $end            reduce using rule 5 (statement -> conditional .)
    ELSE            reduce using rule 5 (statement -> conditional .)
    RBRACE          reduce using rule 5 (statement -> conditional .)


state 6

    (6) statement -> loop .

    COMMENT         reduce using rule 6 (statement -> loop .)
    LET             reduce using rule 6 (statement -> loop .)
    IF              reduce using rule 6 (statement -> loop .)
    FOR             reduce using rule 6 (statement -> loop .)
    WHILE           reduce using rule 6 (statement -> loop .)
    FUNCTION        reduce using rule 6 (statement -> loop .)
    SHOW            reduce using rule 6 (statement -> loop .)
    $end            reduce using rule 6 (statement -> loop .)
    ELSE            reduce using rule 6 (statement -> loop .)
    RBRACE          reduce using rule 6 (statement -> loop .)


state 7

    (7) statement -> function .

    COMMENT         reduce using rule 7 (statement -> function .)
    LET             reduce using rule 7 (statement -> function .)
    IF              reduce using rule 7 (statement -> function .)
    FOR             reduce using rule 7 (statement -> function .)
    WHILE           reduce using rule 7 (statement -> function .)
    FUNCTION        reduce using rule 7 (statement -> function .)
    SHOW            reduce using rule 7 (statement -> function .)
    $end            reduce using rule 7 (statement -> function .)
    ELSE            reduce using rule 7 (statement -> function .)
    RBRACE          reduce using rule 7 (statement -> function .)


state 8

    (8) statement -> display .

    COMMENT         reduce using rule 8 (statement -> display .)
    LET             reduce using rule 8 (statement -> display .)
    IF              reduce using rule 8 (statement -> display .)
    FOR             reduce using rule 8 (statement -> display .)
    WHILE           reduce using rule 8 (statement -> display .)
    FUNCTION        reduce using rule 8 (statement -> display .)
    SHOW            reduce using rule 8 (statement -> display .)
    $end            reduce using rule 8 (statement -> display .)
    ELSE            reduce using rule 8 (statement -> display .)
    RBRACE          reduce using rule 8 (statement -> display .)


state 9

    (9) statement -> input .

    COMMENT         reduce using rule 9 (statement -> input .)
    LET             reduce using rule 9 (statement -> input .)
    IF              reduce using rule 9 (statement -> input .)
    FOR             reduce using rule 9 (statement -> input .)
    WHILE           reduce using rule 9 (statement -> input .)
    FUNCTION        reduce using rule 9 (statement -> input .)
    SHOW            reduce using rule 9 (statement -> input .)
    $end            reduce using rule 9 (statement -> input .)
    ELSE            reduce using rule 9 (statement -> input .)
    RBRACE          reduce using rule 9 (statement -> input .)


state 10

    (10) statement -> COMMENT .

    COMMENT         reduce using rule 10 (statement -> COMMENT .)
    LET             reduce using rule 10 (statement -> COMMENT .)
    IF              reduce using rule 10 (statement -> COMMENT .)
    FOR             reduce using rule 10 (statement -> COMMENT .)
    WHILE           reduce using rule 10 (statement -> COMMENT .)
    FUNCTION        reduce using rule 10 (statement -> COMMENT .)
    SHOW            reduce using rule 10 (statement -> COMMENT .)
    $end            reduce using rule 10 (statement -> COMMENT .)
    ELSE            reduce using rule 10 (statement -> COMMENT .)
    RBRACE          reduce using rule 10 (statement -> COMMENT .)


state 11

    (11) assignment -> LET . IDENTIFIER BE EQUAL TO expression
    (27) input -> LET . IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    IDENTIFIER      shift and go to state 18


state 12

    (12) conditional -> IF . condition THEN statements else_statements_opt
    (15) condition -> . expression IS_LESS_THAN expression
    (16) condition -> . expression IS_EQUAL_TO expression
    (17) condition -> . expression IS_GREATER_THAN expression
    (18) condition -> . expression IS_NOT_EQUAL_TO expression
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 23
    LPAREN          shift and go to state 24

    condition                      shift and go to state 19
    expression                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 22

state 13

    (29) loop -> FOR . IDENTIFIER IN list DO statements

    IDENTIFIER      shift and go to state 25


state 14

    (30) loop -> WHILE . condition DO statements
    (15) condition -> . expression IS_LESS_THAN expression
    (16) condition -> . expression IS_EQUAL_TO expression
    (17) condition -> . expression IS_GREATER_THAN expression
    (18) condition -> . expression IS_NOT_EQUAL_TO expression
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 23
    LPAREN          shift and go to state 24

    condition                      shift and go to state 26
    expression                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 22

state 15

    (35) function -> FUNCTION . IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE

    IDENTIFIER      shift and go to state 27


state 16

    (28) display -> SHOW . expression
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 23
    LPAREN          shift and go to state 24

    expression                     shift and go to state 28
    term                           shift and go to state 21
    factor                         shift and go to state 22

state 17

    (2) statements -> statements statement .

    COMMENT         reduce using rule 2 (statements -> statements statement .)
    LET             reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FUNCTION        reduce using rule 2 (statements -> statements statement .)
    SHOW            reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 18

    (11) assignment -> LET IDENTIFIER . BE EQUAL TO expression
    (27) input -> LET IDENTIFIER . BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    BE              shift and go to state 29


state 19

    (12) conditional -> IF condition . THEN statements else_statements_opt

    THEN            shift and go to state 30


state 20

    (15) condition -> expression . IS_LESS_THAN expression
    (16) condition -> expression . IS_EQUAL_TO expression
    (17) condition -> expression . IS_GREATER_THAN expression
    (18) condition -> expression . IS_NOT_EQUAL_TO expression
    (19) expression -> expression . PLUS term
    (20) expression -> expression . MINUS term

    IS_LESS_THAN    shift and go to state 31
    IS_EQUAL_TO     shift and go to state 32
    IS_GREATER_THAN shift and go to state 33
    IS_NOT_EQUAL_TO shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 21

    (21) expression -> term .
    (22) term -> term . TIMES factor
    (23) term -> term . DIVIDE factor

    IS_LESS_THAN    reduce using rule 21 (expression -> term .)
    IS_EQUAL_TO     reduce using rule 21 (expression -> term .)
    IS_GREATER_THAN reduce using rule 21 (expression -> term .)
    IS_NOT_EQUAL_TO reduce using rule 21 (expression -> term .)
    PLUS            reduce using rule 21 (expression -> term .)
    MINUS           reduce using rule 21 (expression -> term .)
    COMMENT         reduce using rule 21 (expression -> term .)
    LET             reduce using rule 21 (expression -> term .)
    IF              reduce using rule 21 (expression -> term .)
    FOR             reduce using rule 21 (expression -> term .)
    WHILE           reduce using rule 21 (expression -> term .)
    FUNCTION        reduce using rule 21 (expression -> term .)
    SHOW            reduce using rule 21 (expression -> term .)
    $end            reduce using rule 21 (expression -> term .)
    ELSE            reduce using rule 21 (expression -> term .)
    RBRACE          reduce using rule 21 (expression -> term .)
    RPAREN          reduce using rule 21 (expression -> term .)
    THEN            reduce using rule 21 (expression -> term .)
    DO              reduce using rule 21 (expression -> term .)
    RBRACKET        reduce using rule 21 (expression -> term .)
    COMMA           reduce using rule 21 (expression -> term .)
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38


state 22

    (24) term -> factor .

    TIMES           reduce using rule 24 (term -> factor .)
    DIVIDE          reduce using rule 24 (term -> factor .)
    IS_LESS_THAN    reduce using rule 24 (term -> factor .)
    IS_EQUAL_TO     reduce using rule 24 (term -> factor .)
    IS_GREATER_THAN reduce using rule 24 (term -> factor .)
    IS_NOT_EQUAL_TO reduce using rule 24 (term -> factor .)
    PLUS            reduce using rule 24 (term -> factor .)
    MINUS           reduce using rule 24 (term -> factor .)
    COMMENT         reduce using rule 24 (term -> factor .)
    LET             reduce using rule 24 (term -> factor .)
    IF              reduce using rule 24 (term -> factor .)
    FOR             reduce using rule 24 (term -> factor .)
    WHILE           reduce using rule 24 (term -> factor .)
    FUNCTION        reduce using rule 24 (term -> factor .)
    SHOW            reduce using rule 24 (term -> factor .)
    $end            reduce using rule 24 (term -> factor .)
    ELSE            reduce using rule 24 (term -> factor .)
    RBRACE          reduce using rule 24 (term -> factor .)
    RPAREN          reduce using rule 24 (term -> factor .)
    THEN            reduce using rule 24 (term -> factor .)
    DO              reduce using rule 24 (term -> factor .)
    RBRACKET        reduce using rule 24 (term -> factor .)
    COMMA           reduce using rule 24 (term -> factor .)


state 23

    (25) factor -> NUMBER .

    TIMES           reduce using rule 25 (factor -> NUMBER .)
    DIVIDE          reduce using rule 25 (factor -> NUMBER .)
    IS_LESS_THAN    reduce using rule 25 (factor -> NUMBER .)
    IS_EQUAL_TO     reduce using rule 25 (factor -> NUMBER .)
    IS_GREATER_THAN reduce using rule 25 (factor -> NUMBER .)
    IS_NOT_EQUAL_TO reduce using rule 25 (factor -> NUMBER .)
    PLUS            reduce using rule 25 (factor -> NUMBER .)
    MINUS           reduce using rule 25 (factor -> NUMBER .)
    COMMENT         reduce using rule 25 (factor -> NUMBER .)
    LET             reduce using rule 25 (factor -> NUMBER .)
    IF              reduce using rule 25 (factor -> NUMBER .)
    FOR             reduce using rule 25 (factor -> NUMBER .)
    WHILE           reduce using rule 25 (factor -> NUMBER .)
    FUNCTION        reduce using rule 25 (factor -> NUMBER .)
    SHOW            reduce using rule 25 (factor -> NUMBER .)
    $end            reduce using rule 25 (factor -> NUMBER .)
    ELSE            reduce using rule 25 (factor -> NUMBER .)
    RBRACE          reduce using rule 25 (factor -> NUMBER .)
    RPAREN          reduce using rule 25 (factor -> NUMBER .)
    THEN            reduce using rule 25 (factor -> NUMBER .)
    DO              reduce using rule 25 (factor -> NUMBER .)
    RBRACKET        reduce using rule 25 (factor -> NUMBER .)
    COMMA           reduce using rule 25 (factor -> NUMBER .)


state 24

    (26) factor -> LPAREN . expression RPAREN
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 23
    LPAREN          shift and go to state 24

    expression                     shift and go to state 39
    term                           shift and go to state 21
    factor                         shift and go to state 22

state 25

    (29) loop -> FOR IDENTIFIER . IN list DO statements

    IN              shift and go to state 40


state 26

    (30) loop -> WHILE condition . DO statements

    DO              shift and go to state 41


state 27

    (35) function -> FUNCTION IDENTIFIER . LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE

    LPAREN          shift and go to state 42


state 28

    (28) display -> SHOW expression .
    (19) expression -> expression . PLUS term
    (20) expression -> expression . MINUS term

    COMMENT         reduce using rule 28 (display -> SHOW expression .)
    LET             reduce using rule 28 (display -> SHOW expression .)
    IF              reduce using rule 28 (display -> SHOW expression .)
    FOR             reduce using rule 28 (display -> SHOW expression .)
    WHILE           reduce using rule 28 (display -> SHOW expression .)
    FUNCTION        reduce using rule 28 (display -> SHOW expression .)
    SHOW            reduce using rule 28 (display -> SHOW expression .)
    $end            reduce using rule 28 (display -> SHOW expression .)
    ELSE            reduce using rule 28 (display -> SHOW expression .)
    RBRACE          reduce using rule 28 (display -> SHOW expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 29

    (11) assignment -> LET IDENTIFIER BE . EQUAL TO expression
    (27) input -> LET IDENTIFIER BE . EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    EQUAL           shift and go to state 43


state 30

    (12) conditional -> IF condition THEN . statements else_statements_opt
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . conditional
    (6) statement -> . loop
    (7) statement -> . function
    (8) statement -> . display
    (9) statement -> . input
    (10) statement -> . COMMENT
    (11) assignment -> . LET IDENTIFIER BE EQUAL TO expression
    (12) conditional -> . IF condition THEN statements else_statements_opt
    (29) loop -> . FOR IDENTIFIER IN list DO statements
    (30) loop -> . WHILE condition DO statements
    (35) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (28) display -> . SHOW expression
    (27) input -> . LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    COMMENT         shift and go to state 10
    LET             shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    FUNCTION        shift and go to state 15
    SHOW            shift and go to state 16

    statements                     shift and go to state 44
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    conditional                    shift and go to state 5
    loop                           shift and go to state 6
    function                       shift and go to state 7
    display                        shift and go to state 8
    input                          shift and go to state 9

state 31

    (15) condition -> expression IS_LESS_THAN . expression
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 23
    LPAREN          shift and go to state 24

    expression                     shift and go to state 45
    term                           shift and go to state 21
    factor                         shift and go to state 22

state 32

    (16) condition -> expression IS_EQUAL_TO . expression
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 23
    LPAREN          shift and go to state 24

    expression                     shift and go to state 46
    term                           shift and go to state 21
    factor                         shift and go to state 22

state 33

    (17) condition -> expression IS_GREATER_THAN . expression
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . term
    (22) term -> . term TIMES factor
    (23) term -> . term DIVIDE factor
    (24) term -> . factor
    (25) factor -> . NUMBER
    (26) factor -> . LPAREN expression RPAREN
